Update Dark mode and fix bugs

--- a/style.css
+++ b/style.css
@@ -37,17 +37,3 @@ section {
   color: black;
   font-weight: bold;
 }
-
-#EducationAndWorkCard .card {
-  min-height: 20vh;
-  max-height: 20vh;
-}
-
-#EducationAndWorkCard .card-text {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 2;
-  font-size: medium;
-}
